# financial-planner

./: .gitignore  CHANGES_SUMMARY.md  app.py  app_enhanced.py  app_new.py  pyproject.toml  requirements.txt  test_engine.py  test_fix.py
backend/: config.py
backend/database/: database.py  models.py
backend/models/: portfolio.py  user_profile.py
backend/prompts/: system_prompts.py  templates.py
backend/services/: advanced_report_generator.py  ai_service.py  auth_service.py  enhanced_financial_engine.py  financial_engine.py  market_service.py  portfolio_service.py  recommendation.py
backend/ui/: NotoSans-Regular.pkl  auth_components.py  dashboard.py  enhanced_analysis_components.py  form_navigation.py  loan_handler.py  session_state.py  test_visualization.py  visualization.py
backend/utils/: excel_generator.py  formatters.py  validators.py
financial_advisor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reference-docs/: app_flow.md  backend-strcuture.md  fronted-guidelines.md  implemetation_plan.md
