[project]
name = "financial-advisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf>=1.7.2",
    "groq>=0.23.1",
    "langchain>=0.3.24",
    "langchain-groq>=0.3.2",
    "matplotlib>=3.10.1",
    "pillow>=11.2.1",
    "plotly>=6.0.1",
    "pydantic>=2.11.3",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
    "xlsxwriter>=3.2.3",
]
